# cmd/api/docs/swagger.json
@@ -172,6 +172,47 @@
                 }
             }
         },
+        "/orders/sorted": {
+            "get": {
+                "description": "Get Order from DB",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "order"
+                ],
+                "summary": "get all order",
+                "responses": {
+                    "200": {
+                        "description": "Order",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/github_com_Pos-Tech-Challenge-48_delivery-api_internal_entities.Order"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "invalid document",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "customer not find",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "general error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/payment": {
             "post": {
                 "description": "save Payment in DB",
