# internal/controllers/ordersorterhandler/order_sorter.go
@@ -3,6 +3,7 @@ package ordersorterhandler
 import (
 	"net/http"
 
+	_ "github.com/Pos-Tech-Challenge-48/delivery-api/internal/entities"
 	interfaces "github.com/Pos-Tech-Challenge-48/delivery-api/internal/interfaces/usecases/ordersorter"
 	"github.com/gin-gonic/gin"
 )
@@ -17,6 +18,16 @@ func NewOrderSorterHandler(OrderSorterUseCase interfaces.OrderSorter) *OrderSort
 	}
 }
 
+// OrderSorter godoc
+// @Summary get all order
+// @Description Get Order from DB
+// @Tags order
+// @Produce application/json
+// @Success 200 {array} entities.Order "Order"
+// @Failure 400 {object} string "invalid document"
+// @Failure 404 {object} string "customer not find"
+// @Failure 500 {object} string "general error"
+// @Router /orders/sorted [get]
 func (o *OrderSorterHandler) Handle(c *gin.Context) {
 	ctx := c.Request.Context()
 
